<resources>
    <string name="app_name">DrugDict_2018</string>
    <string name="id_hint">ID</string>
    <string name="password_hint">Password</string>
    <string name="LoginButton">Login</string>
    <string name="SingupButton">Sign Up</string>

    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <string name="searchColor">색상</string>
    <string name="searchShape">모양</string>
    <string name="searchDivisionLine">구분선</string>

    <string name="detailName">약명</string>
    <string name="detailCompany">제조회사</string>
    <string name="detailShape">모양</string>
    <string name="detailColor">색상</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="precaution_dialog_title">병용금기 알람</string>
    <string name="precaution_dialog_positive_btn">OK</string>
</resources>
