<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrugDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:src="@android:drawable/btn_star"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/detailName"
                android:textSize="20sp"
                android:gravity="right"/>
            <TextView
                android:id="@+id/detailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="이름"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/detailCompany"
                android:textSize="20sp"
                android:gravity="right"/>
            <TextView
                android:id="@+id/detailCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="회사"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/detailShape"
                android:textSize="20sp"
                android:gravity="right"/>
            <TextView
                android:id="@+id/detailShape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="모양"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/detailColor"
                android:textSize="20sp"
                android:gravity="right"/>
            <TextView
                android:id="@+id/detailColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="색상"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>